Fix post alignment issue

--- a/client/src/styles/home.scss
+++ b/client/src/styles/home.scss
@@ -48,11 +48,7 @@ $div-background: #e8e8e8;
     border-color: #d6d6d6;
     border-width: thin;
     padding: 10px;
-    width: 600px;
-
-    &:not(.workout-edit-form) {
-      width: 400px;
-    }
+    width: 575px;
 
     .workout-div-creator {
       font-size: 20px;
